# KBTU_PP2

./: main.py  main2.py  pyproject.toml  requirements.txt
Practice11/: paint.py  racer.py  snake.py
Practice2/: README.md
Practice2/boolean/: boolean_comparison.py  boolean_intro.py  boolean_operators.py
Practice2/if_else/: if_elif_else.py  if_else.py  if_statement.py  short_hand_if.py
Practice2/loops/: for_break.py  for_continue.py  for_loop.py  while_break.py  while_continue.py  while_loop.py
Practice3/: README.md
Practice3/classes/: class_definition.py  class_methods.py  class_variables.py  init_method.py
Practice3/functions/: args_kwargs.py  basic_functions.py  function_arguments.py  return_values.py
Practice3/inheritance/: inheritance_basics.py  method_overriding.py  multiple_inheritance.py  super_function.py
Practice3/lambda/: lambda_basics.py  lambda_with_filter.py  lambda_with_map.py  lambda_with_sorted.py
Practice4/: README.md  date_task.py  generator.py  json_task.py  math1.py
Practice5/: regex_test.ipynb
Practice5/Regex_exercises/: ex_1.py  ex_10.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py  ex_7.py  ex_8.py  ex_9.py
Practice7/: config.py  phonebook.py
Practice8/: connect.py  contacts.csv  functions.sql  phonebook.py  procedures.sql
TSIS1/: config.py  connect.py  contacts.csv  phonebook.py  procedures.sql  schema.sql
TSIS2/: paint.py  tools.py
TSIS3/: constants.py  leaderboard.json  main.py  persistence.py  racer.py  scoring.py  ui.py
TSIS4/: config.py  db.py  game.py  main.py  settings.json  settings.py
(+17 files in other folders)
