[project]
name = "kbtu-pp2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "ipykernel>=7.2.0",
    "psycopg2-binary>=2.9.11",
    "pygame>=2.6.1",
    "pytest>=9.0.3",
    "requests>=2.32.5",
]
